tests/scripts/type_errors/equals_type_incorrect.roto
fn main() -> bool? {
    return (5 == "hello")
}
